--- a/bloc.ipynb
+++ b/bloc.ipynb
@@ -93,8 +93,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* https://www.youtube.com/watch?v=nXJ_2uGWM-M\n",
+    "\n",
+    "Frames originated as a technology used for knowledge representation in artificial intelligence. They are very close to objects and class hierarchies in object-oriented languages although their fundamental design goals are different. Frames are focused on the explicit and intuitive representation of knowledge whereas objects focus on encapsulation and information hiding. Original Marvin Minsky's concept *lacks some principal features for software design*, so I must extend it with ability to **store sequential collections**.\n",
+    "\n",
+    "In practice, the techniques and capabilities of the frame model and object-oriented languages overlap significantly so much as we can treat frames not only a native superset of OOP but they drastically extend object design concepts wider: we can represent any knowledge in frames, and use any programming paradigms as we desire.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -249,6 +261,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to metaL.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a metaL.py\n",
+    "\n",
+    "# class Frame:\n",
+    "\n",
+    "    # stack manipulations\n",
+    "\n",
+    "    ## ( a b -- a )\n",
+    "    def pop(self):\n",
+    "        return self.nest.pop(-1)\n",
+    "    ## ( a b -- a b )\n",
+    "    def top(self):\n",
+    "        return self.nest[-1]\n",
+    "    ## ( a b -- )\n",
+    "    def dropall(self):\n",
+    "        self.nest = [] ; return self    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -273,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -320,9 +363,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "<frame:Hello> @7f3f900f4940\n",
-      "\tslot = <frame:slot> @7f3f900f4860\n",
-      "\t<frame:World> @7f3f900f48d0\n"
+      "<frame:Hello> @7f1e355b5160\n",
+      "\tslot = <frame:slot> @7f1e355b51d0\n",
+      "\t<frame:World> @7f1e355b5128\n"
      ]
     }
    ],
@@ -341,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +437,7 @@
       "test_metaL.py::TestFrame::test_hello \u001b[32mPASSED\u001b[0m\u001b[36m                              [ 66%]\u001b[0m\n",
       "test_metaL.py::TestFrame::test_operators \u001b[32mPASSED\u001b[0m\u001b[36m                          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[1m\u001b[32m============================== 3 passed in 0.11s ===============================\u001b[0m\n"
+      "\u001b[1m\u001b[32m============================== 3 passed in 0.16s ===============================\u001b[0m\n"
      ]
     }
    ],
@@ -531,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -611,10 +654,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f3f900e77b8>"
+       "<graphviz.dot.Digraph at 0x7f1e34d661d0>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1401,10 +1444,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f3f9005b630>"
+       "<graphviz.dot.Digraph at 0x7f1e34d86898>"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1837,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1852,15 +1895,70 @@
     "%%writefile -a metaL.py\n",
     "\n",
     "# classes subset required to implement EDS: Executable Data Structure (c)\n",
-    "class Active(Frame): pass\n",
-    "\n",
-    "# VM command which wraps Python function(context)\n",
-    "class Cmd(Active): pass\n"
+    "class Active(Frame): pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to metaL.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a metaL.py\n",
+    "\n",
+    "# VM command which wraps Python function(context)\n",
+    "class Cmd(Active):\n",
+    "    # use function name as .val\n",
+    "    def __init__(self,F):\n",
+    "        Active.__init__(self,F.__name__)\n",
+    "        self.fn = F\n",
+    "    # apply stored function to context\n",
+    "    def eval(self,ctx):\n",
+    "        self.fn(ctx)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to metaL.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a metaL.py\n",
+    "\n",
+    "# context = virtual machine\n",
+    "# represents FORTH-like execution context: vocabulary + stack + set of commands works over VM state\n",
+    "class VM(Active):\n",
+    "    ## operator methods specially dedicated for wrapping Python functions\n",
+    "    def __setitem__(self,key,F):\n",
+    "        if callable(F): self[key] = Cmd(F) ; return self\n",
+    "        else: return Active.__setitem__(self,key,F)\n",
+    "    def __lshift__(self,F):\n",
+    "        if callable(F): return self << Cmd(F)\n",
+    "        else: return Active.__lshift__(self,F)\n",
+    "\n",
+    "# sequence: every element in nest[] executes one by one on a single provided context\n",
+    "class Seq(Active,Vector): pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1880,11 +1978,312 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Debug"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to metaL.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a metaL.py\n",
+    "\n",
+    "# debug\n",
+    "\n",
+    "def Q(ctx): print(ctx)\n",
+    "vm['?'] = Q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stack operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to metaL.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a metaL.py\n",
+    "\n",
+    "# stack operations\n",
+    "\n",
+    "def DOT(ctx): ctx.dropall()\n",
+    "vm['.'] = DOT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PLY-based parser: There is no-syntax "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FORTH-based languages are no-syntax languages: it uses only more or less simple lexer, but there is no syntax predefined structures which must be parsed. Every language element implements control or compiling structures has its own responsibility on required work and no of this work interlinked with the parser."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Due to language syntax simplicity, it is very easy and fast to make a usable command shell system: you need a very compact parser, and tiny set of words (functions) provides interpreter and command definition capabilities. To make the bootstrap version of a metaprogramming system we don't need more than that simple command shell: what we need only is an initialization from ASCII text files, and little command language provided to a user.\n",
+    "\n",
+    "I tend to totally avoid any scripting languages use. If you look a lot of publications and manuals on expert system design, there are a lot of cryptic Lisp/Prolog code defines knowledge databases and rules. But it is not required to have scripting, as data stored in the *object graph database* itself has a power of describing processing procedures and rules. It looks like [MPS: The Domain-Specific Language Creator by JetBrains](https://www.jetbrains.com/mps/) where data defines not only structures, but its (self)transformations.\n",
+    "\n",
+    "From the other side, it is a very common case to have human-readable ASCII formats for batching data loading and transformation, so I leave very primitive FORTH-like command language for these tasks. \n",
+    "\n",
+    "First of all, I must be compatible with git hostings wide use like GitHub etc and don't want to have problems like image-based Smalltalk systems. Frame graphs are great for visualization, but text files good for easy to use storage can be read by a human, edited and recovered manually. Here I especially want to note that `metaL` is not a **visual** language/system, but this is a **visualizable programming** system."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The difference is a user use case: you will not break your hands with hours of a mouse juggling. In place of that, you'll get a simple command-line shell, and interface which will show you your data structures in a pleasant human-friendly graph and diagrams representation. FORTH-like command (not programming) language so simple in its roots, that it is even useful on narrow screen mobile phones. You don't fly around the screen as you do with most other script languages -- there is no recursion syntax, as result you don't need to fix your code saving parens balance or right tabbing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to metaL.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a metaL.py\n",
+    "\n",
+    "# no-syntax parser\n",
+    "\n",
+    "import ply.lex as lex\n",
+    "\n",
+    "tokens = ['symbol','number','hex','bin']\n",
+    "\n",
+    "t_ignore = ' \\t\\r\\n'\n",
+    "t_ignore_comment = r'[\\#\\\\].*'\n",
+    "\n",
+    "def t_hex(t):\n",
+    "    r'0x[0-9a-fA-F]+'\n",
+    "    return Hex(t.value)\n",
+    "\n",
+    "def t_bin(t):\n",
+    "    r'0b[01]+'\n",
+    "    return Bin(t.value)\n",
+    "\n",
+    "def t_number(t):\n",
+    "    r'[+\\-]?[0-9]+(\\.[0-9]*)?([eE][+\\-][0-9]+)?'\n",
+    "    return Number(t.value)\n",
+    "\n",
+    "def t_symbol(t):\n",
+    "    r'[^ \\t\\r\\n\\#\\\\]+'\n",
+    "    return Symbol(t.value)\n",
+    "\n",
+    "def t_error(t): raise SyntaxError(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpreter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to metaL.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a metaL.py\n",
+    "\n",
+    "# interpreter\n",
+    "\n",
+    "## ( -- str:token )\n",
+    "def WORD(ctx):\n",
+    "    token = ctx.lexer.token()\n",
+    "    if token: ctx // token\n",
+    "    return token\n",
+    "\n",
+    "## ( str:token -- some:object | notfound:token )\n",
+    "def FIND(ctx):\n",
+    "    token = ctx.pop()\n",
+    "    try: ctx // ctx[token.val] ; return True\n",
+    "    except KeyError: ctx // token ; return False\n",
+    "\n",
+    "## ( any:object -- ... )\n",
+    "def EVAL(ctx):\n",
+    "    ctx.pop().eval(ctx)\n",
+    "\n",
+    "## ( str -- )\n",
+    "def INTERP(ctx):\n",
+    "    ctx.lexer = lex.lex() ; ctx.lexer.input(ctx.pop().val)\n",
+    "    while True:\n",
+    "        if not WORD(ctx): break\n",
+    "        if isinstance(ctx.top(),Symbol):\n",
+    "            if not FIND(ctx): raise SyntaxError(ctx.top())\n",
+    "        EVAL(ctx)\n",
+    "        print(vm)\n",
+    "\n",
+    "# run commands from Jupyter as strings\n",
+    "def M(cmd=''):\n",
+    "    vm // String(cmd) ; INTERP(vm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With M() calls you now able to run metaL commands right in Jupyter notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "from metaL import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! touch metaL.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<vm:metaL> @7f1e355ae240\n",
+      "\t? = <cmd:Q> @7f1e355aea90\n",
+      "\t. = <cmd:DOT> @7f1e355aeda0\n",
+      "\t<number:-01> @7f1e343ef128\n",
+      "\n",
+      "<vm:metaL> @7f1e355ae240\n",
+      "\t? = <cmd:Q> @7f1e355aea90\n",
+      "\t. = <cmd:DOT> @7f1e355aeda0\n",
+      "\t<number:-01> @7f1e343ef128\n",
+      "\t<number:+02.30> @7f1e343ef908\n",
+      "\n",
+      "<vm:metaL> @7f1e355ae240\n",
+      "\t? = <cmd:Q> @7f1e355aea90\n",
+      "\t. = <cmd:DOT> @7f1e355aeda0\n",
+      "\t<number:-01> @7f1e343ef128\n",
+      "\t<number:+02.30> @7f1e343ef908\n",
+      "\t<number:-4e+5> @7f1e343ef550\n",
+      "\n",
+      "<vm:metaL> @7f1e355ae240\n",
+      "\t? = <cmd:Q> @7f1e355aea90\n",
+      "\t. = <cmd:DOT> @7f1e355aeda0\n",
+      "\t<number:-01> @7f1e343ef128\n",
+      "\t<number:+02.30> @7f1e343ef908\n",
+      "\t<number:-4e+5> @7f1e343ef550\n",
+      "\t<hex:0xDeadBeef> @7f1e343ef0f0\n",
+      "\n",
+      "<vm:metaL> @7f1e355ae240\n",
+      "\t? = <cmd:Q> @7f1e355aea90\n",
+      "\t. = <cmd:DOT> @7f1e355aeda0\n",
+      "\t<number:-01> @7f1e343ef128\n",
+      "\t<number:+02.30> @7f1e343ef908\n",
+      "\t<number:-4e+5> @7f1e343ef550\n",
+      "\t<hex:0xDeadBeef> @7f1e343ef0f0\n",
+      "\t<bin:0b1101> @7f1e343ef5c0\n",
+      "\n",
+      "<vm:metaL> @7f1e355ae240\n",
+      "\t? = <cmd:Q> @7f1e355aea90\n",
+      "\t. = <cmd:DOT> @7f1e355aeda0\n",
+      "\t<number:-01> @7f1e343ef128\n",
+      "\t<number:+02.30> @7f1e343ef908\n",
+      "\t<number:-4e+5> @7f1e343ef550\n",
+      "\t<hex:0xDeadBeef> @7f1e343ef0f0\n",
+      "\t<bin:0b1101> @7f1e343ef5c0\n",
+      "\n",
+      "<vm:metaL> @7f1e355ae240\n",
+      "\t? = <cmd:Q> @7f1e355aea90\n",
+      "\t. = <cmd:DOT> @7f1e355aeda0\n",
+      "\t<number:-01> @7f1e343ef128\n",
+      "\t<number:+02.30> @7f1e343ef908\n",
+      "\t<number:-4e+5> @7f1e343ef550\n",
+      "\t<hex:0xDeadBeef> @7f1e343ef0f0\n",
+      "\t<bin:0b1101> @7f1e343ef5c0\n",
+      "\n",
+      "<vm:metaL> @7f1e355ae240\n",
+      "\t? = <cmd:Q> @7f1e355aea90\n",
+      "\t. = <cmd:DOT> @7f1e355aeda0\n",
+      "\n",
+      "<vm:metaL> @7f1e355ae240\n",
+      "\t? = <cmd:Q> @7f1e355aea90\n",
+      "\t. = <cmd:DOT> @7f1e355aeda0\n",
+      "\n",
+      "<vm:metaL> @7f1e355ae240\n",
+      "\t? = <cmd:Q> @7f1e355aea90\n",
+      "\t. = <cmd:DOT> @7f1e355aeda0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from metaL import *\n",
+    "M('-01 +02.30 -4e+5 0xDeadBeef 0b1101 ? . ? \\ number literals')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vocabulary Compiler"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1895,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +2334,7 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    with open(sys.argv[0][:-3]+'.ini') as ini: # process metaL.ini\n",
-    "        vm // String(ini.read()) ; INTERP(vm)"
+    "        M(ini.read())"
    ]
   }
  ],
